[project]
name = "claw-data-filter"
version = "0.1.0"
description = "LLM-powered agent data filtering tool"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "duckdb>=0.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
claw-filter = "claw_data_filter.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
